@@ -1,8 +1,11 @@
 // DESCRIPTION: Verilator: Verilog Test module
 //
 // This file ONLY is placed under the Creative Commons Public Domain, for
-// any use, without warranty, 2009 by Wilson Snyder.
+// any use, without warranty, 2009-2023 by Wilson Snyder.
 // SPDX-License-Identifier: CC0-1.0
+
+`define stop $stop
+`define checks(gotv,expv) do if ((gotv) !== (expv)) begin $write("%%Error: %s:%0d:  got='%s' exp='%s'\n", `__FILE__,`__LINE__, (gotv), (expv)); `stop; end while(0);
 
 module x;
    typedef struct {
@@ -15,14 +18,31 @@ module x;
       embedded_t tab [3:0];
    } notembedded_t;
 
+   typedef struct {
+      logic [15:0] m_i;
+      string       m_s;
+   } istr_t;
+
    notembedded_t p;
    embedded_t t [1:0];
+   istr_t istr;
+   string s;
 
    initial begin
       t[1].a = 2;
       p.b.a = 1;
       if (t[1].a != 2) $stop;
       if (p.b.a != 1) $stop;
+
+      istr.m_i = 12;
+      istr.m_s = "str1";
+      s = $sformatf("%p", istr);
+      `checks(s, "'{m_i:'hc, m_s:\"str1\"}");
+
+      istr = '{m_i: '1, m_s: "str2"};
+      s = $sformatf("%p", istr);
+      `checks(s, "'{m_i:'hffff, m_s:\"str2\"}");
+
       $write("*-* All Finished *-*\n");
       $finish;
    end
